// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Installations should render component when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          Installations
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.input
                    classname=""
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <mock-styled.span
                    classname=""
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Search Apps
                  </mock-styled.label>
                </mock-styled.div>
                <mock-styled.div
                  aria-controls=":r0:"
                  aria-haspopup="listbox"
                  role="combobox"
                >
                  <mock-styled.input
                    id="app-ids-select"
                    name="appIds"
                  />
                  <mock-styled.div
                    classname="el-mb5"
                  >
                    <mock-styled.span
                      classname="el-ml2 el-intent-default el-icon-new"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                          fill="currentColor"
                        />
                      </svg>
                    </mock-styled.span>
                    <p>
                      No apps selected
                    </p>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="developer-search-box"
              >
                Company
              </mock-styled.label>
              <mock-styled.div
                aria-controls=":r1:"
                aria-expanded="false"
                aria-haspopup="listbox"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="client-search-box"
              >
                Client
              </mock-styled.label>
              <mock-styled.div
                aria-controls=":r2:"
                aria-expanded="false"
                aria-haspopup="listbox"
                role="combobox"
              >
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Is Charged Consumption
                </mock-styled.label>
                <mock-styled.div
                  classname="el-has-grey-bg"
                >
                  <mock-styled.input
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-true"
                  >
                    <mock-styled.span>
                      Charged
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-false"
                  >
                    <mock-styled.span>
                      Free
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="el-intent-primary"
                type="button"
              >
                <mock-styled.div />
                Download CSV
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <section
      class="el-page-container"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        Installations
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-mb5"
              >
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  placeholder="Search"
                />
                <mock-styled.span
                  classname=""
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Search Apps
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.div
                aria-controls=":r0:"
                aria-haspopup="listbox"
                role="combobox"
              >
                <mock-styled.input
                  id="app-ids-select"
                  name="appIds"
                />
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.span
                    classname="el-ml2 el-intent-default el-icon-new"
                    role="img"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <p>
                    No apps selected
                  </p>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="developer-search-box"
            >
              Company
            </mock-styled.label>
            <mock-styled.div
              aria-controls=":r1:"
              aria-expanded="false"
              aria-haspopup="listbox"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="client-search-box"
            >
              Client
            </mock-styled.label>
            <mock-styled.div
              aria-controls=":r2:"
              aria-expanded="false"
              aria-haspopup="listbox"
              role="combobox"
            >
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="el-mb11"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-intent-primary"
              type="button"
            >
              <mock-styled.div />
              Download CSV
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Installations should render component with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          Installations
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.input
                    classname=""
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <mock-styled.span
                    classname=""
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Search Apps
                  </mock-styled.label>
                </mock-styled.div>
                <mock-styled.div
                  aria-controls=":r4:"
                  aria-haspopup="listbox"
                  role="combobox"
                >
                  <mock-styled.input
                    id="app-ids-select"
                    name="appIds"
                  />
                  <mock-styled.div
                    classname="el-mb5"
                  >
                    <mock-styled.span
                      classname="el-ml2 el-intent-default el-icon-new"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                          fill="currentColor"
                        />
                      </svg>
                    </mock-styled.span>
                    <p>
                      No apps selected
                    </p>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="developer-search-box"
              >
                Company
              </mock-styled.label>
              <mock-styled.div
                aria-controls=":r5:"
                aria-expanded="false"
                aria-haspopup="listbox"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="client-search-box"
              >
                Client
              </mock-styled.label>
              <mock-styled.div
                aria-controls=":r6:"
                aria-expanded="false"
                aria-haspopup="listbox"
                role="combobox"
              >
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Is Charged Consumption
                </mock-styled.label>
                <mock-styled.div
                  classname="el-has-grey-bg"
                >
                  <mock-styled.input
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-true"
                  >
                    <mock-styled.span>
                      Charged
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-false"
                  >
                    <mock-styled.span>
                      Free
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="el-intent-primary"
                type="button"
              >
                <mock-styled.div />
                Download CSV
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div
          classname="el-mb11"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="8"
          role="table"
        >
          <mock-styled.div
            role="row"
          >
            <mock-styled.div
              aria-label="Customer Name"
              role="columnheader"
            >
              Customer Name
            </mock-styled.div>
            <mock-styled.div
              aria-label="App Name"
              role="columnheader"
            >
              App Name
            </mock-styled.div>
            <mock-styled.div
              aria-label="Reapit Customer Code"
              role="columnheader"
            >
              Reapit Customer Code
            </mock-styled.div>
            <mock-styled.div
              aria-label="Customer Address"
              role="columnheader"
            >
              Customer Address
            </mock-styled.div>
            <mock-styled.div
              aria-label="Date Installed"
              role="columnheader"
            >
              Date Installed
            </mock-styled.div>
            <mock-styled.div
              aria-label="Installed By"
              role="columnheader"
            >
              Installed By
            </mock-styled.div>
            <mock-styled.div
              aria-label="Date Uninstalled"
              role="columnheader"
            >
              Date Uninstalled
            </mock-styled.div>
            <mock-styled.div
              aria-label="Uninstalled By"
              role="columnheader"
            >
              Uninstalled By
            </mock-styled.div>
            <mock-styled.div
              role="columnheader"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="row"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.div
                  data-narrow-label="Customer Name"
                >
                  Sandbox Estates
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.375 15.375h-2.25C3.504 15.375 3 15.879 3 16.5V21h4.5v-4.5c0-.621-.504-1.125-1.125-1.125m6.75-5.625h-2.25c-.621 0-1.125.504-1.125 1.125V21h4.5V10.875c0-.621-.504-1.125-1.125-1.125M19.875 3h-2.25c-.621 0-1.125.504-1.125 1.125V21H21V4.125C21 3.504 20.496 3 19.875 3"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.div
                  data-narrow-label="App Name"
                >
                  App Test Name
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Reapit Customer Code"
                >
                  SBOX
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Customer Address"
                >
                  67-74 Third Floor Saffron Hill London EC1N 8QX
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Date Installed"
                >
                  23-03-2022
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Installed By"
                >
                  test@example.com
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Date Uninstalled"
                >
                  -
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Uninstalled By"
                />
              </mock-styled.div>
              <mock-styled.div
                classname=""
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              aria-hidden="false"
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-primary"
                    >
                      <mock-styled.div />
                      Togggle API Consumption
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-danger"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Uninstall
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.button
            aria-label="Previous"
            data-testid="back-button"
            role="button"
            type="button"
          >
            <mock-styled.span
              classname="el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            aria-label="Next"
            data-testid="forward-button"
            role="button"
            type="button"
          >
            <mock-styled.span
              classname="el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <section
      class="el-page-container"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        Installations
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-mb5"
              >
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  placeholder="Search"
                />
                <mock-styled.span
                  classname=""
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Search Apps
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.div
                aria-controls=":r4:"
                aria-haspopup="listbox"
                role="combobox"
              >
                <mock-styled.input
                  id="app-ids-select"
                  name="appIds"
                />
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.span
                    classname="el-ml2 el-intent-default el-icon-new"
                    role="img"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <p>
                    No apps selected
                  </p>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="developer-search-box"
            >
              Company
            </mock-styled.label>
            <mock-styled.div
              aria-controls=":r5:"
              aria-expanded="false"
              aria-haspopup="listbox"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="client-search-box"
            >
              Client
            </mock-styled.label>
            <mock-styled.div
              aria-controls=":r6:"
              aria-expanded="false"
              aria-haspopup="listbox"
              role="combobox"
            >
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="el-mb11"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-intent-primary"
              type="button"
            >
              <mock-styled.div />
              Download CSV
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div
        classname="el-mb11"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="8"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            aria-label="Customer Name"
            role="columnheader"
          >
            Customer Name
          </mock-styled.div>
          <mock-styled.div
            aria-label="App Name"
            role="columnheader"
          >
            App Name
          </mock-styled.div>
          <mock-styled.div
            aria-label="Reapit Customer Code"
            role="columnheader"
          >
            Reapit Customer Code
          </mock-styled.div>
          <mock-styled.div
            aria-label="Customer Address"
            role="columnheader"
          >
            Customer Address
          </mock-styled.div>
          <mock-styled.div
            aria-label="Date Installed"
            role="columnheader"
          >
            Date Installed
          </mock-styled.div>
          <mock-styled.div
            aria-label="Installed By"
            role="columnheader"
          >
            Installed By
          </mock-styled.div>
          <mock-styled.div
            aria-label="Date Uninstalled"
            role="columnheader"
          >
            Date Uninstalled
          </mock-styled.div>
          <mock-styled.div
            aria-label="Uninstalled By"
            role="columnheader"
          >
            Uninstalled By
          </mock-styled.div>
          <mock-styled.div
            role="columnheader"
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer Name"
              >
                Sandbox Estates
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.375 15.375h-2.25C3.504 15.375 3 15.879 3 16.5V21h4.5v-4.5c0-.621-.504-1.125-1.125-1.125m6.75-5.625h-2.25c-.621 0-1.125.504-1.125 1.125V21h4.5V10.875c0-.621-.504-1.125-1.125-1.125M19.875 3h-2.25c-.621 0-1.125.504-1.125 1.125V21H21V4.125C21 3.504 20.496 3 19.875 3"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="App Name"
              >
                App Test Name
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Reapit Customer Code"
              >
                SBOX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Customer Address"
              >
                67-74 Third Floor Saffron Hill London EC1N 8QX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Installed By"
              >
                test@example.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Date Uninstalled"
              >
                -
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Uninstalled By"
              />
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            aria-hidden="false"
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-center"
                >
                  <mock-styled.button
                    classname="el-intent-primary"
                  >
                    <mock-styled.div />
                    Togggle API Consumption
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-danger"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Uninstall
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          aria-label="Previous"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          aria-label="Next"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
